add support pattern for ozzo validation. Remove x-go-regex from header
